--- a/assets/plugins/slick/slick.css
+++ b/assets/plugins/slick/slick.css
@@ -55,7 +55,7 @@
     left: 0;
 
     display: block;
-    margin-left: auto;
+    margin-left: 90px;
     margin-right: auto;
 }
 .slick-track:before,
